test/compile-fail/scope/use-no-name-group/expected.txt
error: unresolved import `c`
 --> top.rhdl:5:11
  |
5 | use a::{b, c};
  |            ^ no `c` in `a`
